--- a/pom.xml
+++ b/pom.xml
@@ -54,9 +54,25 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
+            <testResources>
+                <testResource>
+                    <directory>src/main/webapp</directory>
+                </testResource>
+            </testResources>
 		<plugins>
 			<!-- Package as an executable jar/war -->
 			<plugin>
@@ -65,5 +81,7 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
 
 </project>
